--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,71 +5,22 @@
          http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-  <display-name>Test Portal Driver</display-name>
-
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>/WEB-INF/pluto-portal-driver-services-config.xml</param-value>
-  </context-param>
-
-  <filter>
-    <filter-name>plutoPortalDriver</filter-name>
-    <filter-class>org.apache.pluto.driver.PortalDriverFilter</filter-class>
-    <async-supported>true</async-supported>
-  </filter>
-
-  <filter>
-    <filter-name>springSecurityFilterChain</filter-name>
-    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    <async-supported>true</async-supported>
-  </filter>
-
-  <filter-mapping>
-    <filter-name>springSecurityFilterChain</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-
-  <listener>
-    <listener-class>org.apache.pluto.driver.PortalStartupListener</listener-class>
-  </listener>
+  <display-name>Test Portlet</display-name>
 
   <servlet>
-    <description>Pluto Portal Driver Controller</description>
-    <display-name>Pluto Portal Driver</display-name>
-    <servlet-name>plutoPortalDriver</servlet-name>
-    <servlet-class>org.apache.pluto.driver.PortalDriverServlet</servlet-class>
-    <async-supported>true</async-supported>
-    <multipart-config>
-      <file-size-threshold>1048576</file-size-threshold>
-    </multipart-config>
-  </servlet>
-
-  <servlet>
-    <servlet-name>TestPortlet</servlet-name>
+    <servlet-name>TestPortlet1</servlet-name>
     <servlet-class>org.apache.pluto.container.driver.PortletServlet</servlet-class>
     <init-param>
       <param-name>portlet-name</param-name>
-      <param-value>TestPortlet</param-value>
+      <param-value>TestPortlet1</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>plutoPortalDriver</servlet-name>
-    <url-pattern>/portal/*</url-pattern>
+    <servlet-name>TestPortlet1</servlet-name>
+    <url-pattern>/PlutoInvoker/TestPortlet1</url-pattern>
   </servlet-mapping>
-
-  <servlet-mapping>
-    <servlet-name>TestPortlet</servlet-name>
-    <url-pattern>/PlutoInvoker/TestPortlet</url-pattern>
-  </servlet-mapping>
-
-  <jsp-config>
-    <taglib>
-      <taglib-uri>http://portals.apache.org/pluto</taglib-uri>
-      <taglib-location>/WEB-INF/tld/pluto.tld</taglib-location>
-    </taglib>
-  </jsp-config>
 
 </web-app>
 
